Task-6-HTML discount block is added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
         <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-            
+
     <body>
-        
+        <!-- блок с объявлением скидки -->
+        <header class="header">
+            <div class="container ">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="header-exclamation">
+                            Успевайте!
+                        </h2>
+                        <p class="header-discount">
+                            Только <span class="header-discount-date">28, 29 и 30 октября</span> <br> 
+                            мы принимаем заказы со скидкой <span class="header-discount-value">2017</span> рублей <br> 
+                            на каждую дверь с установкой
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- окончание блока с объявлением скидки -->
     </body>
 </html>
