--- a/index.html
+++ b/index.html
@@ -29,5 +29,111 @@
             </div>
         </header>
         <!-- окончание блока с объявлением скидки -->
+
+        <!-- блок с карточками товаров -->
+        <div class="product">
+            <div class="container">  
+                <div class="row no-gutters mx-xl-5">
+
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4">                    
+                        <div class="product-wrap">
+                            <div class="product-image">
+                                <img src="img/product_1.png" alt="product photo">
+                            </div>
+                            <div class="product-text">
+                                <p class="product-name">
+                                    Краснодеревщик
+                                </p>
+                                <p class="product-price">
+                                    Цена от <span class="product-price-value">16 130 Р</span>
+                                </p>
+                            </div>
+                        </div>                                        
+                    </div>
+                    
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4">                    
+                        <div class="product-wrap">
+                            <div class="product-image">
+                                <img src="img/product_2.png" alt="product photo">
+                            </div>
+                            <div class="product-text">
+                                <p class="product-name">
+                                    Синержи
+                                </p>
+                                <p class="product-price">
+                                    Цена от <span class="product-price-value">16 130 Р</span>
+                                </p>
+                            </div>
+                        </div>                                        
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4">                    
+                        <div class="product-wrap">
+                            <div class="product-image">
+                                <img src="img/product_3.png" alt="product photo">
+                            </div>
+                            <div class="product-text">
+                                <p class="product-name">
+                                    Блюм Индастри 9 <br> <span class="product-name-details">(массив ясеня, бука, дуба)</span>                                 
+                                </p>
+                                <p class="product-price">
+                                    Цена от <span class="product-price-value">16 130 Р</span>
+                                </p>
+                            </div>
+                        </div>                                        
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4">                    
+                        <div class="product-wrap">
+                            <div class="product-image">
+                                <img src="img/product_4.png" alt="product photo">
+                            </div>
+                            <div class="product-text">
+                                <p class="product-name">
+                                    Свобода
+                                </p>
+                                <p class="product-price">
+                                    Цена от <span class="product-price-value">16 130 Р</span>
+                                </p>
+                            </div>
+                        </div>                                        
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4">                    
+                        <div class="product-wrap">
+                            <div class="product-image">
+                                <img src="img/product_5.png" alt="product photo">
+                            </div>
+                            <div class="product-text">
+                                <p class="product-name">
+                                    Mezzo Porte
+                                </p>
+                                <p class="product-price">
+                                    Цена от <span class="product-price-value">16 130 Р</span>
+                                </p>
+                            </div>
+                        </div>
+                                            
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-4">
+                        <div class="product-wrap">
+                            <div class="product-image">
+                                <img src="img/product_6.png" alt="product photo">
+                            </div>
+                            <div class="product-text">                        
+                                <p class="product-name">
+                                    Двери Вид <br> <span class="product-name-details">(из массива сосны)</span>                    
+                                </p>
+                                <p class="product-price">
+                                    Цена от <span class="product-price-value">16 130 Р</span>
+                                </p>
+                            </div>                        
+                        </div>
+                    </div>
+
+                </div>           
+            </div>      
+        </div>
+        <!-- окончание блока с карточками товаров -->
     </body>
 </html>
