Task-6-HTML button block is added

--- a/index.html
+++ b/index.html
@@ -135,5 +135,20 @@
             </div>      
         </div>
         <!-- окончание блока с карточками товаров -->
+
+        <!-- блок, содержащий кнопку доступа к полному каталогу -->
+        <div class="catalog-access">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <button type="button" class="catalog-access-btn">
+                            Получить полный каталог с актуальными ценами
+                        </button>
+                    </div>
+                </div>
+            </div>      
+        </div>
+        <!-- окончание блока, содержащего кнопку доступа к полному каталогу -->
+        
     </body>
 </html>
