--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Task 1</title>
+        <link rel="stylesheet" href="/bootstrap/bootstrap-reboot.min.css">
+        <link rel="stylesheet" href="/bootstrap/bootstrap-grid.min.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     
     <body>
