feature block is added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,138 @@
         <link rel="stylesheet" href="/bootstrap/bootstrap-grid.min.css">
         <link rel="stylesheet" href="/css/style.css">
     </head>
-    
     <body>
-        
+        <!-- feature block -->
+        <div class="features">
+            <div class="container justify-content-center">
+
+                <div class="row">
+                    <div class="col-md-12 col-xl-4">
+                        <div class="features__summary">
+                            <h2 class="features__summary__value">
+                                5 лет
+                            </h2>
+                            <p class="features__summary__clarification">
+                                На рынке изделий из гофрокартона
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-xl-4">
+                        <div class="features__summary">
+                            <h2 class="features__summary__value">
+                                до 5 000 000 м2
+                            </h2>
+                            <p class="features__summary__clarification">
+                                Ежемесячный объем производства гофрокартона
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-xl-4">
+                        <div class="features__summary">
+                            <h2 class="features__summary__value">
+                                4 000 м2
+                            </h2>
+                            <p class="features__summary__clarification">
+                                Площадь склада
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <div class="features__wrapper">
+                            <div class="features__wrapper__image-wrapper">
+                                <img src="/img/features/production.png" alt="production">
+                            </div>
+                            <div class="features__wrapper__text-wrapper">
+                                <h3 class="features__wrapper__text-wrapper__title">
+                                    Производство
+                                </h3>
+                                <p class="features__wrapper__text-wrapper__content">
+                                    4 технологические линии способны выполнить любой заказ любой сложности
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <div class="features__wrapper">
+                            <div class="features__wrapper__image-wrapper">
+                                <img src="/img/features/samples.png" alt="samples">
+                            </div>
+                            <div class="features__wrapper__text-wrapper">
+                                <h3 class="features__wrapper__text-wrapper__title">
+                                    Бесплатные образцы
+                                </h3>
+                                <p class="features__wrapper__text-wrapper__content">
+                                    Бесплатно делаем образцы гофроупаковки - это помогает заранее увидеть упаковку
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <div class="features__wrapper">
+                            <div class="features__wrapper__image-wrapper">
+                                <img src="/img/features/quality.png" alt="quality">
+                            </div>
+                            <div class="features__wrapper__text-wrapper">
+                                <h3 class="features__wrapper__text-wrapper__title">
+                                    Стабильное качество
+                                </h3>
+                                <p class="features__wrapper__text-wrapper__content">
+                                    Собственная лаборатория контролирует качество на каждом этапе производства
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <div class="features__wrapper">
+                            <div class="features__wrapper__image-wrapper">
+                                <img src="/img/features/reserve.png" alt="reserve">
+                            </div>
+                            <div class="features__wrapper__text-wrapper">
+                                <h3 class="features__wrapper__text-wrapper__title">
+                                    Страховой запас
+                                </h3>
+                                <p class="features__wrapper__text-wrapper__content">
+                                    Можем хранить запас гофропродукции на своих складах и поставлять его партиями
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <div class="features__wrapper">
+                            <div class="features__wrapper__image-wrapper">
+                                <img src="/img/features/printing.png" alt="printing">
+                            </div>
+                            <div class="features__wrapper__text-wrapper">
+                                <h3 class="features__wrapper__text-wrapper__title">
+                                    Флексопечать
+                                </h3>
+                                <p class="features__wrapper__text-wrapper__content">
+                                    Возможно нанесение вашего логотипа, текста или манипуляционных знаков
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-4">
+                        <div class="features__wrapper">
+                            <div class="features__wrapper__image-wrapper">
+                                <img src="/img/features/hydrophobic_additives.png" alt="hydrophobic_additives">
+                            </div>
+                            <div class="features__wrapper__text-wrapper">
+                                <h3 class="features__wrapper__text-wrapper__title">
+                                    Гидрофобные добавки
+                                </h3>
+                                <p class="features__wrapper__text-wrapper__content">
+                                    На производстве реализована технология, которая позволяет гофрокартону стать прочнее
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end of feature block -->
     </body>
 </html>
