products block is added

--- a/index.html
+++ b/index.html
@@ -141,5 +141,77 @@
             </div>
         </div>
         <!-- end of feature block -->
+
+        <!-- products block -->
+        <div class="products">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-12">
+                        <h2 class="products__title">
+                            НАША ПРОДУКЦИЯ
+                        </h2>
+                    </div>
+
+                    <div class="col-md-12 col-lg-6">
+                        <div class="products__wrapper">
+                            <div class="products__wrapper__image">
+                                <img src="/img/products/box.jpg" alt="box">
+                            </div>
+                            <div class="products__wrapper__text">
+                                <h3 class="products__wrapper__text__name">
+                                    Гофрокороб 4-х клапанный
+                                </h3>
+                                <button type="button" class="products__wrapper__text__learn-more-btn">Подробнее</button>
+                                <button type="button" class="products__wrapper__text__get-payment-btn">Получить расчет</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="products__wrapper">
+                            <div class="products__wrapper__image">
+                                <img src="/img/products/tray.jpg" alt="tray">
+                            </div>
+                            <div class="products__wrapper__text">
+                                <h3 class="products__wrapper__text__name">
+                                    Гофролоток
+                                </h3>
+                                <button type="button" class="products__wrapper__text__learn-more-btn">Подробнее</button>
+                                <button type="button" class="products__wrapper__text__get-payment-btn">Получить расчет</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="products__wrapper">
+                            <div class="products__wrapper__image">
+                                <img src="/img/products/box_self_assembled.jpg" alt="box_self_assembled">
+                            </div>
+                            <div class="products__wrapper__text">
+                                <h3 class="products__wrapper__text__name">
+                                    Гофрокороб самосборный (сложная высечка)
+                                </h3>
+                                <button type="button" class="products__wrapper__text__learn-more-btn">Подробнее</button>
+                                <button type="button" class="products__wrapper__text__get-payment-btn">Получить расчет</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-6">
+                        <div class="products__wrapper">
+                            <div class="products__wrapper__image">
+                                <img src="/img/products/sheet_cardboard.jpg" alt="sheet_cardboard">
+                            </div>
+                            <div class="products__wrapper__text">
+                                <h3 class="products__wrapper__text__name">
+                                    Листовой гофрокартон
+                                </h3>
+                                <button type="button" class="products__wrapper__text__learn-more-btn">Подробнее</button>
+                                <button type="button" class="products__wrapper__text__get-payment-btn">Получить расчет</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end of products block -->
     </body>
 </html>
