wrong path mistakes are corrected

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Task 1</title>
-        <link rel="stylesheet" href="/bootstrap/bootstrap-reboot.min.css">
-        <link rel="stylesheet" href="/bootstrap/bootstrap-grid.min.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="bootstrap/bootstrap-reboot.min.css">
+        <link rel="stylesheet" href="bootstrap/bootstrap-grid.min.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <!-- feature block -->
@@ -50,7 +50,7 @@
                     <div class="col-12 col-md-6 col-xl-4">
                         <div class="features__wrapper">
                             <div class="features__wrapper__image-wrapper">
-                                <img src="/img/features/production.png" alt="production">
+                                <img src="img/features/production.png" alt="production">
                             </div>
                             <div class="features__wrapper__text-wrapper">
                                 <h3 class="features__wrapper__text-wrapper__title">
@@ -65,7 +65,7 @@
                     <div class="col-12 col-md-6 col-xl-4">
                         <div class="features__wrapper">
                             <div class="features__wrapper__image-wrapper">
-                                <img src="/img/features/samples.png" alt="samples">
+                                <img src="img/features/samples.png" alt="samples">
                             </div>
                             <div class="features__wrapper__text-wrapper">
                                 <h3 class="features__wrapper__text-wrapper__title">
@@ -80,7 +80,7 @@
                     <div class="col-12 col-md-6 col-xl-4">
                         <div class="features__wrapper">
                             <div class="features__wrapper__image-wrapper">
-                                <img src="/img/features/quality.png" alt="quality">
+                                <img src="img/features/quality.png" alt="quality">
                             </div>
                             <div class="features__wrapper__text-wrapper">
                                 <h3 class="features__wrapper__text-wrapper__title">
@@ -95,7 +95,7 @@
                     <div class="col-12 col-md-6 col-xl-4">
                         <div class="features__wrapper">
                             <div class="features__wrapper__image-wrapper">
-                                <img src="/img/features/reserve.png" alt="reserve">
+                                <img src="img/features/reserve.png" alt="reserve">
                             </div>
                             <div class="features__wrapper__text-wrapper">
                                 <h3 class="features__wrapper__text-wrapper__title">
@@ -110,7 +110,7 @@
                     <div class="col-12 col-md-6 col-xl-4">
                         <div class="features__wrapper">
                             <div class="features__wrapper__image-wrapper">
-                                <img src="/img/features/printing.png" alt="printing">
+                                <img src="img/features/printing.png" alt="printing">
                             </div>
                             <div class="features__wrapper__text-wrapper">
                                 <h3 class="features__wrapper__text-wrapper__title">
@@ -125,7 +125,7 @@
                     <div class="col-12 col-md-6 col-xl-4">
                         <div class="features__wrapper">
                             <div class="features__wrapper__image-wrapper">
-                                <img src="/img/features/hydrophobic_additives.png" alt="hydrophobic_additives">
+                                <img src="img/features/hydrophobic_additives.png" alt="hydrophobic_additives">
                             </div>
                             <div class="features__wrapper__text-wrapper">
                                 <h3 class="features__wrapper__text-wrapper__title">
@@ -156,7 +156,7 @@
                     <div class="col-md-12 col-lg-6">
                         <div class="products__wrapper">
                             <div class="products__wrapper__image">
-                                <img src="/img/products/box.jpg" alt="box">
+                                <img src="img/products/box.jpg" alt="box">
                             </div>
                             <div class="products__wrapper__text">
                                 <h3 class="products__wrapper__text__name">
@@ -170,7 +170,7 @@
                     <div class="col-md-12 col-lg-6">
                         <div class="products__wrapper">
                             <div class="products__wrapper__image">
-                                <img src="/img/products/tray.jpg" alt="tray">
+                                <img src="img/products/tray.jpg" alt="tray">
                             </div>
                             <div class="products__wrapper__text">
                                 <h3 class="products__wrapper__text__name">
@@ -184,7 +184,7 @@
                     <div class="col-md-12 col-lg-6">
                         <div class="products__wrapper">
                             <div class="products__wrapper__image">
-                                <img src="/img/products/box_self_assembled.jpg" alt="box_self_assembled">
+                                <img src="img/products/box_self_assembled.jpg" alt="box_self_assembled">
                             </div>
                             <div class="products__wrapper__text">
                                 <h3 class="products__wrapper__text__name">
@@ -198,7 +198,7 @@
                     <div class="col-md-12 col-lg-6">
                         <div class="products__wrapper">
                             <div class="products__wrapper__image">
-                                <img src="/img/products/sheet_cardboard.jpg" alt="sheet_cardboard">
+                                <img src="img/products/sheet_cardboard.jpg" alt="sheet_cardboard">
                             </div>
                             <div class="products__wrapper__text">
                                 <h3 class="products__wrapper__text__name">
