features block is added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,121 @@
     
     <body>
         <div class="main-container">
-            
+
+            <!-- features block starts -->
+            <div class="main-container__features">
+
+                <div class="main-container__features__summary">
+                    <div class="main-container__features__summary__declaration">
+                        <p class="main-container__features__summary__declaration__value">
+                            5 лет
+                        </p>
+                        <p class="main-container__features__summary__declaration__clarification">
+                            На рынке изделий из гофрокартона
+                        </p>
+                    </div>
+                    <div class="main-container__features__summary__declaration">
+                        <p class="main-container__features__summary__declaration__value">
+                            до 5 000 000 м<sup>2</sup>
+                        </p>
+                        <p class="main-container__features__summary__declaration__clarification">
+                            Ежемесячный объем производства гофрокартона
+                        </p>
+                    </div>
+                    <div class="main-container__features__summary__declaration">
+                        <p class="main-container__features__summary__declaration__value">
+                            4 000 м<sup>2</sup>
+                        </p>
+                        <p class="main-container__features__summary__declaration__clarification">
+                            Площадь склада
+                        </p>
+                    </div>
+                </div>
+
+                <div class="main-container__features__cards">
+                    <div class="main-container__features__cards__card">
+                        <div class="main-container__features__cards__card__image-wrapper">
+                            <img src="img/features/production.png" alt="production">
+                        </div>
+                        <div class="main-container__features__cards__card__text-wrapper">
+                            <p class="main-container__features__cards__card__text-wrapper__title">
+                                Производство
+                            </p>
+                            <p class="main-container__features__cards__card__text-wrapper__content">
+                                4 технологические линии способны выполнить любой заказ любой сложности
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-container__features__cards__card">
+                        <div class="main-container__features__cards__card__image-wrapper">
+                            <img src="img/features/production.png" alt="production">
+                        </div>
+                        <div class="main-container__features__cards__card__text-wrapper">
+                            <p class="main-container__features__cards__card__text-wrapper__title">
+                                Бесплатные образцы
+                            </p>
+                            <p class="main-container__features__cards__card__text-wrapper__content">
+                                Бесплатно делаем образцы гофроупаковки - это помогает заранее увидеть упаковку
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-container__features__cards__card">
+                        <div class="main-container__features__cards__card__image-wrapper">
+                            <img src="img/features/samples.png" alt="samples">
+                        </div>
+                        <div class="main-container__features__cards__card__text-wrapper">
+                            <p class="main-container__features__cards__card__text-wrapper__title">
+                                Стабильное качество
+                            </p>
+                            <p class="main-container__features__cards__card__text-wrapper__content">
+                                Собственная лаборатория контролирует качество на каждом этапе производства
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-container__features__cards__card">
+                        <div class="main-container__features__cards__card__image-wrapper">
+                            <img src="img/features/quality.png" alt="quality">
+                        </div>
+                        <div class="main-container__features__cards__card__text-wrapper">
+                            <p class="main-container__features__cards__card__text-wrapper__title">
+                                Страховой запас
+                            </p>
+                            <p class="main-container__features__cards__card__text-wrapper__content">
+                                Можем хранить запас гофропродукции на своих складах и поставлять его партиями
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-container__features__cards__card">
+                        <div class="main-container__features__cards__card__image-wrapper">
+                            <img src="img/features/reserve.png" alt="reserve">
+                        </div>
+                        <div class="main-container__features__cards__card__text-wrapper">
+                            <p class="main-container__features__cards__card__text-wrapper__title">
+                                Флексопечать
+                            </p>
+                            <p class="main-container__features__cards__card__text-wrapper__content">
+                                Возможно нанесение вашего логотипа, текста или манипуляционных знаков
+                            </p>
+                        </div>
+                    </div>
+                    <div class="main-container__features__cards__card">
+                        <div class="main-container__features__cards__card__image-wrapper">
+                            <img src="img/features/printing.png" alt="printing">
+                        </div>
+                        <div class="main-container__features__cards__card__text-wrapper">
+                            <p class="main-container__features__cards__card__text-wrapper__title">
+                                Гидрофобные добавки
+                            </p>
+                            <p class="main-container__features__cards__card__text-wrapper__content">
+                                На производстве реализована технология, которая позволяет гофрокартону стать прочнее
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- features block ends -->
+
         </div>
     </body>
 </html>
