products block is added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,64 @@
             </div>
             <!-- features block ends -->
 
+            <!-- products block starts -->
+            <div class="main-container__products">
+                <div class="main-container__products__title">
+                    <p>НАША ПРОДУКЦИЯ</p>
+                </div>
+                <div class="main-container__products__cards">
+                    <div class="main-container__products__cards__card">
+                        <div class="main-container__products__cards__card__image-wrapper">
+                            <img src="img/products/box.jpg" alt="box">
+                        </div>
+                        <div class="main-container__products__cards__card__text-wrapper">
+                            <h3 class="main-container__products__cards__card__text-wrapper__name">
+                                Гофрокороб 4-х клапанный
+                            </h3>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__learn-more-btn">Подробнее</button>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__get-payment-btn">Получить расчет</button>
+                        </div>
+                    </div>
+                    <div class="main-container__products__cards__card">
+                        <div class="main-container__products__cards__card__image-wrapper">
+                            <img src="img/products/tray.jpg" alt="tray">
+                        </div>
+                        <div class="main-container__products__cards__card__text-wrapper">
+                            <h3 class="main-container__products__cards__card__text-wrapper__name">
+                                Гофролоток
+                            </h3>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__learn-more-btn">Подробнее</button>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__get-payment-btn">Получить расчет</button>
+                        </div>
+                    </div>
+                    <div class="main-container__products__cards__card">
+                        <div class="main-container__products__cards__card__image-wrapper">
+                            <img src="img/products/box_self_assembled.jpg" alt="self-assembled box">
+                        </div>
+                        <div class="main-container__products__cards__card__text-wrapper">
+                            <h3 class="main-container__products__cards__card__text-wrapper__name">
+                                Гофрокороб самосборный (сложная высечка)
+                            </h3>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__learn-more-btn">Подробнее</button>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__get-payment-btn">Получить расчет</button>
+                        </div>
+                    </div>
+                    <div class="main-container__products__cards__card">
+                        <div class="main-container__products__cards__card__image-wrapper">
+                            <img src="img/products/sheet_cardboard.jpg" alt="sheet_cardboard">
+                        </div>
+                        <div class="main-container__products__cards__card__text-wrapper">
+                            <h3 class="main-container__products__cards__card__text-wrapper__name">
+                                Листовой гофрокартон
+                            </h3>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__learn-more-btn">Подробнее</button>
+                            <button type="button" class="main-container__products__cards__card__text-wrapper__get-payment-btn">Получить расчет</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- products block ends -->
+            
         </div>
     </body>
 </html>
